fixed contact btn placement on small screens

--- a/info.css
+++ b/info.css
@@ -39,7 +39,7 @@
 
 .contact {
     position: absolute;
-    bottom: 20%;
+    bottom: 30%;
     left: 3%;
     font-size: 2vw;
     padding: 5px 10px;
